--- a/index.html
+++ b/index.html
@@ -408,9 +408,8 @@
   <div class="header-inner">
     <div class="logo-wrap">
       <img class="school-logo"
-           src="corra.png"
-           alt="Logo Colégio CoRRA"
-           onerror="this.src='https://via.placeholder.com/220x80/14213d/a5b4fc?text=CoRRA'; this.alt='Logo placeholder';">
+           src="/corra.png"
+           alt=" Colégio CoRRA">
     </div>
 
     <button class="theme-toggle" id="themeToggle">☀️</button>
