--- a/index.html
+++ b/index.html
@@ -407,11 +407,7 @@
 <header>
   <div class="header-inner">
     <div class="logo-wrap">
-      <img class="school-logo"
-           src="/corra.png"
-           alt=" Colégio CoRRA">
-    </div>
-
+      <img class="school-logo" src="./corra.png" alt="Colégio CoRRA">
     <button class="theme-toggle" id="themeToggle">☀️</button>
   </div>
 </header>
