--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 <header>
   <div class="header-inner">
     <div class="logo-wrap">
-      <img class="school-logo" src="./corra.png" alt="Colégio CoRRA">
+      <img class="school-logo" src="corra.png" alt="Colégio CoRRA">
     <button class="theme-toggle" id="themeToggle">☀️</button>
   </div>
 </header>
